simple-kubernetes/simple-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
spec:
  rules:
    - host: ch05.gihyo.local
      http:
        paths:
          - path: /
            backend:
              serviceName: echo
              servicePort: 80
